src/Components/About/aboutComponent.css
.aboutContainer {
  animation: grow 1s;
}

.skillList {
  display: flex;
}

.skillContainer {
  display: flex;
  /* gap: 1vw; */
  flex-wrap: wrap;
}
.skill {
  transition: all ease-in-out 0.3s;
  /* cursor: pointer; */
  padding: 7px;
  height: fit-content;
  display: flex;
  margin: 0;
  border-radius: 0.5vh;
  text-align: center;
}
.skill:hover {
  transform: scale(1.2);
  filter: drop-shadow(0px 0px 3px white);
}

.skillList {
  display: flex;
  flex-wrap: wrap;
  /* max-width: 18vw; */
  width: clamp(230px, 25vw, 350px);
  gap: 5px;
  color: white;
}

.skillIcon {
  height: fit-content;
  width: fit-content;
  margin-right: 4px;
  align-self: center;
}

.skillContent {
  margin: auto;
  margin-left: 2px;
  font-size: 0.92rem;
  /* font-weight: 300; */
}

.subSkill {
  padding: 5px;
  height: 100%;
  border-radius: 1vh;
  /* width: 20vw; */
  min-width: 200px;
}

@keyframes grow {
  0% {
    transform: scale(0.5);
  }
  100% {
    transform: scale(1);
  }
}

